# AdventOfCode2019

./: .gitignore  CMakeLists.txt  README.md
include/aoc/: aoc.h  graph.h  hash.h  intcode.h  io.h  registry.h  remote.h  runner.h  testing.h  types.h
src/: template.cpp.template
src/2019/: day01.cpp  day02.cpp  day03.cpp
src/aoc/: cli.cpp  intcode.cpp  registry.cpp  remote.cpp  runner.cpp
